--- a/Spliter.html
+++ b/Spliter.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scripture Splitter with API</title>
+    <title>Scripture Splitter with API: (BKIM Ministry)</title>
     <style>
         body {
             font-family: Arial, sans-serif;
