--- a/Spliter.html
+++ b/Spliter.html
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>
-    <h1>Scripture Splitter with API</h1>
+    <h1>Scripture Splitter (BKIM Ministry)</h1>
     <label for="scriptureReference">Enter Scripture Reference (e.g., "1 Samuel 15"):</label>
     <input id="scriptureReference" type="text" placeholder="Enter scripture reference">
     <br>
